--- a/TesteTecnicoSag.dproj
+++ b/TesteTecnicoSag.dproj
@@ -135,6 +135,9 @@
             <Form>frmViewMain</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="src\models\untModelLote.pas"/>
+        <DCCReference Include="src\models\untModelPesagem.pas"/>
+        <DCCReference Include="src\models\untModelMortalidade.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
@@ -161,7 +164,7 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="4">
-                <DeployFile LocalName="Win32\Debug\TesteTecnicoSag.exe" Configuration="Debug" Class="ProjectOutput">
+                <DeployFile LocalName="bin\Win32\Debug\TesteTecnicoSag.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>TesteTecnicoSag.exe</RemoteName>
                         <Overwrite>true</Overwrite>
